# aws_toolkit

./: .gitignore  README.md  amplify.yml  config-overrides.js  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
amplify/: .python-version  team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/api/awstoolkitapi/: cli-inputs.json
amplify/backend/auth/awstoolkitf68a9a3c/: cli-inputs.json
amplify/backend/function/awstoolkitapi/: Pipfile  awstoolkitapi-cloudformation-template.json  function-parameters.json
amplify/backend/function/awstoolkitapi/src/: index.py
amplify/backend/function/awstoolkitapi/src/events/: get.json  post.json
amplify/backend/storage/awstoolkitDB/: cli-inputs.json
amplify/backend/types/: amplify-dependent-resources-ref.d.ts
lambdas/: lambda_list.py  lambdas_utils.py
lambdas/code_snippet/: lambda.py
lambdas/tests/: test_code_snippet.py
public/: index.html
src/: App.css  App.js  index.js
src/components/: CodeEditor.js  LangDropDown.js  SafeUrl.js  TTLDropDown.js
src/components/css/: CodeEditor.css  DropDown.css  SafeUrl.css
src/utils/: encrypt.js
